--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -211,8 +211,7 @@
                             <a href="portfolio.html" class="mobile-nav__link link-resp">
                                 Portfolio
                                 <span>
-                                    <img src="assets/images/arrow-right.png"
-                                        class="mobile-nav__link__arrow-img img-resp" alt="">
+                                    <img src="assets/images/arrow-right.png" class="mobile-nav__link__arrow-img img-resp" alt="">
                                 </span>
                             </a>
                             <div class="mobile-nav__list mobile-nav--resp">
@@ -223,95 +222,79 @@
                                 </div>
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.tru-data.com" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.tworeport.com" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="https://www.tworeport.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             TwoReport
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.afiaanyi.com" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="https://www.afiaanyi.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             Afiaanyi
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             MOM Foundation
                                         </a>
                                     </div>
                                 </div>
-                                <div
-                                    class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="ourworks.html" class="mobile-nav__title">
+                                <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
+                                    <a href="portfolio.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
                                 <div class="mobile-nav--flex">
-                                    <div class="mobile-nav--xspace"
-                                        class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.pave.ng" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                    <div class="mobile-nav--xspace" class="mobile-nav__list-item mobile-nav__list-item--small">
+                                        <a href="https://www.pave.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             PAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="ourworks.html" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.kjk.com.ng/cmsdemo/AdminPage/login" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="https://www.kjk.com.ng/cmsdemo/AdminPage/login" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             KJK CMS Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://attend.kjk.africa" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             e-Attendance
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="https://www.mantleofmordecai.org" target="_blank"
-                                            class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
                                 </div>
-                                <div
-                                    class="mobile-nav__list-item mobile-nav__list-item--header  mobile-nav__list-item--header mobile-nav__list-item--header-border">
+                                <div class="mobile-nav__list-item mobile-nav__list-item--header  mobile-nav__list-item--header mobile-nav__list-item--header-border">
                                     <a href="portfolio.html" class="mobile-nav__title">
                                         Website/App Development
                                     </a>
@@ -321,15 +304,9 @@
                                         Branding &amp; Development
                                     </a>
                                 </div>
-                                <!-- <div class="mobile-nav--flex">
-                                    <div style="flex: 50%;" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="services.html" class="mobile-nav__title mobile-nav__title--small">
-                                            
-                                        </a>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
+
                         <div class="mobile-nav__container">
                             <a href="solutions.html" class="mobile-nav__link link-resp active">
                                 Solutions
@@ -519,7 +496,7 @@
                             Portfolio
                         </h2>
 
-                        <p class="portfolio-section__text">
+                        <!-- <p class="portfolio-section__text">
                             KJK AFRICA provides engaging and exciting software solutions for modern retail. Our team
                             will be happy to lend web services
                             to promote your business, creating scalable solutions to attract new buyers and boost
@@ -527,7 +504,7 @@
                             old ones. We help your business to reach a larger audience and build long lasting
                             relationships and create
                             an appealing shopping experience.
-                        </p>
+                        </p> -->
 
                     </div>
 
@@ -829,7 +806,7 @@
                             Portfolio
                         </h2>
 
-                        <p class="portfolio-section__text">
+                        <!-- <p class="portfolio-section__text">
                             KJK AFRICA provides engaging and exciting software solutions for modern retail. Our team
                             will be happy to lend web services
                             to promote your business, creating scalable solutions to attract new buyers and boost
@@ -837,7 +814,7 @@
                             old ones. We help your business to reach a larger audience and build long lasting
                             relationships and create
                             an appealing shopping experience.
-                        </p>
+                        </p> -->
 
                     </div>
 
@@ -900,7 +877,7 @@
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link" href="#" target="_blank">Visit Website</a>
+                            <a class="portfolio-section-link" href="https://attend.kjk.africa" target="_blank">Visit Website</a>
                             <a class="portfolio-section__download" href="#">Download PDF</a>
 
                         </div>
@@ -999,7 +976,7 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link" href="#" target="_blank">Visit Website</a>
+                            <a class="portfolio-section-link" href="https://www.pave.ng" target="_blank">Visit Website</a>
                             <a class="portfolio-section__download" href="#">Download PDF</a>
 
                         </div>
@@ -1319,10 +1296,11 @@
                                 <img src="assets/images/april-logo.png" alt="">
                             </div>
                             <p>
-                                nonymous Chat room with a forum and a blog to share life’s topics and issues. An on-demand emotional wellbeing
-                                 service that connects people securely with real counsellors in one-on-one chat
+                                April Travels Limited is one of the foremost travel management companies in Nigeria.
+
+                                They offer travel services such as Ticketing and Reservation, Corporate Travel Management, Packaged Tours and Ground Travel Logistics.    
                             </p>
-                            <a style="background: #17873F;" href="" target="_blank"
+                            <a style="background: #17873F;" href="https://apriltravelsng.com/" target="_blank"
                                 class="btn btn--primary portfolio-section__content-btn mom btn--hover">
                                 Visit Website
                             </a>
@@ -1374,7 +1352,7 @@
                             <p>
                                 AFIAANYI is designed to connect Local Businesses and Brands to the world by providing E- tools for sellers and suppliers to gain global audience.     
                             </p>
-                            <a style="background: #98281B;" href="" target="_blank"
+                            <a style="background: #98281B;" href="https://www.afiaanyi.com" target="_blank"
                                 class="btn btn--primary portfolio-section__content-btn mom btn--hover">
                                 Visit Website
                             </a>
