--- a/app/team.html
+++ b/app/team.html
@@ -198,7 +198,7 @@
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="ourworks.html" class="mobile-nav__title">
+                                    <a href="portfolio.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
@@ -209,7 +209,7 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="ourworks.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
@@ -219,32 +219,32 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://attend.kjk.africa" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             e-Attendance
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
@@ -259,13 +259,6 @@
                                         Branding &amp; Development
                                     </a>
                                 </div>
-                                <!-- <div class="mobile-nav--flex">
-                                    <div style="flex: 50%;" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="services.html" class="mobile-nav__title mobile-nav__title--small">
-                                            
-                                        </a>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                         <div class="mobile-nav__container">
