--- a/app/how-we-work.html
+++ b/app/how-we-work.html
@@ -200,7 +200,7 @@
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="ourworks.html" class="mobile-nav__title">
+                                    <a href="portfolio.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
@@ -211,7 +211,7 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="ourworks.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
@@ -221,32 +221,32 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://attend.kjk.africa" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             e-Attendance
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
@@ -261,13 +261,6 @@
                                         Branding &amp; Development
                                     </a>
                                 </div>
-                                <!-- <div class="mobile-nav--flex">
-                                    <div style="flex: 50%;" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="services.html" class="mobile-nav__title mobile-nav__title--small">
-                                            
-                                        </a>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                         <div class="mobile-nav__container">
