--- a/app/index.html
+++ b/app/index.html
@@ -262,12 +262,12 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
