--- a/app/solutions.html
+++ b/app/solutions.html
@@ -208,7 +208,7 @@ gtag('config', 'UA-159861942-1');
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="ourworks.html" class="mobile-nav__title">
+                                    <a href="portfolio.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
@@ -219,7 +219,7 @@ gtag('config', 'UA-159861942-1');
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="ourworks.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
@@ -229,32 +229,32 @@ gtag('config', 'UA-159861942-1');
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://attend.kjk.africa" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             e-Attendance
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             FAVE
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Mind Me
                                         </a>
                                     </div>
@@ -269,13 +269,6 @@ gtag('config', 'UA-159861942-1');
                                         Branding &amp; Development
                                     </a>
                                 </div>
-                                <!-- <div class="mobile-nav--flex">
-                                    <div style="flex: 50%;" class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="services.html" class="mobile-nav__title mobile-nav__title--small">
-                                            
-                                        </a>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                         <div class="mobile-nav__container">
